# robotchallenge

./: .dockerignore  .env  .env.example  .eslintrc.js  .gitignore  .gitmodules  .stylelintrc.json  Dockerfile  README.md  commitlint.config.js  config.env  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.husky/: pre-commit
.storybook/: main.js  preview.js
backend/: Cargo.toml  Dockerfile
backend/__mock__/: rust_no_lib_info.wasm
backend/migrations/2023-02-20-172733_users/: up.sql
backend/migrations/2023-02-21-120624_add_user_name/: down.sql  up.sql
backend/migrations/2023-02-21-161022_add_role/: down.sql  up.sql
backend/migrations/2023-02-21-165033_add_algos_table/: down.sql  up.sql
backend/migrations/2023-02-22-165625_add_categories_table/: down.sql  up.sql
backend/migrations/2023-02-24-125357_add_lib_info_to_algo/: down.sql  up.sql
backend/migrations/2023-02-25-183632_add_algo_version/: down.sql  up.sql
backend/migrations/2023-02-26-154044_add_user_group/: down.sql  up.sql
backend/migrations/2023-02-27-212345_add_deadline_at_to_categories/: down.sql  up.sql
backend/src/: actions.rs  algos.rs  auth.rs  categories.rs  db.rs  main.rs  models.rs  schema.rs  tests.rs  user_groups.rs  users.rs
backend/src/utils/: auth.rs  mod.rs  wasm_module.rs
config/: env.js  webpack.config.js  webpackDevServer.config.js
core/: Cargo.toml  Makefile
cron/: Dockerfile
nginx/: site.conf.tpl
postgres/: init.sql  servers.json
public/: index.html
scripts/: init-letsencrypt.sh
src/: App.css  App.tsx  core.worker.ts  global.d.ts  (+7 more)
(+149 files in other folders)
