[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
oauth2 = "4.3.0"
anyhow = "1.0.69"
url = "2.1.0"
dotenv = "0.15.0"
octocrab = "0.18.1"
log = "0.4.17"
actix-cors = "0.6.4"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "serde_json", "chrono"] }
diesel_migrations = "2.0.0"
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }
actix-multipart = "0.5.0"
chrono = "0.4.23"
wasmer = "3.2.0-alpha.1"
wasmer-wasi = "3.2.0-alpha.1"
wasmer-derive = "3.2.0-alpha.1"
wasmer-types = "3.2.0-alpha.1"